force-app/main/default/objects/Catalog_Item__c/Catalog_Item__c.object-meta.xml
<CustomObject>
    <description>Created by: YB</description>
    <label>Catalog Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Catalog Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>