force-app/main/default/objects/Catalog_Item__c/fields/Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Cost__c</fullName>
    <label>Monthly Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>