force-app/main/default/objects/Catalog_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Created by: YB</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Role</fullName>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Hosting Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>