force-app/main/default/objects/Catalog_Item__c/listViews/Catalog_Items_All.listView-meta.xml
<ListView>
    <fullName>Catalog_Items_All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Catalog Items-All</label>
    <sharedTo>
        <group>SF_Admin_Team</group>
    </sharedTo>
</ListView>