force-app/main/default/objects/Catalog_Item__c/listViews/Hosting_Details.listView-meta.xml
<ListView>
    <fullName>Hosting_Details</fullName>
    <columns>NAME</columns>
    <columns>Hosting_Service__c</columns>
    <columns>Estimate__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Hosting Detail</value>
    </filters>
    <label>Hosting Details</label>
    <sharedTo>
        <group>SF_Admin_Team</group>
    </sharedTo>
</ListView>