force-app/main/default/objects/Catalog_Item__c/listViews/User_Roles.listView-meta.xml
<ListView>
    <fullName>User_Roles</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>Estimate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>User Role</value>
    </filters>
    <label>User Roles</label>
    <sharedTo>
        <group>SF_Admin_Team</group>
    </sharedTo>
</ListView>